# lemlib-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  main.rs
src/auton_routines/: mod.rs  negative_elims.rs  skills.rs  test.rs
src/auton_routines/partials/: alliance_stake.rs  mod.rs
src/auton_routines/run_macros/: alliance_stake.rs  mod.rs
src/auton_wrapper/: mod.rs
src/controllers/: mod.rs  pid.rs
src/devices/: mod.rs  motor_group.rs  pneumatics.rs
src/differential/: chassis.rs  drive_curve.rs  mod.rs
src/differential/drive_curve/: exponential.rs  flipped_power.rs  mod.rs  power.rs
src/differential/motions/: angular.rs  boomerang.rs  lateral.rs  linear.rs  mod.rs  ramsete.rs
src/laments/: chassis.rs  mod.rs  motor_group.rs
src/laments/utils/: math.rs  mod.rs  pid.rs
src/motions/: chassis.rs  drive_curve.rs  mod.rs
src/particle_filter/: mod.rs
src/particle_filter/sensors/: distance.rs  mod.rs
src/particle_flter/: abstract_sensor.rs  mod.rs
src/particle_flter/sensors/: distance.rs  mod.rs
src/subsystems/: arm_state.rs  arm_state_machine.rs  intake.rs  ladybrown.rs  mod.rs  pneumatics.rs
src/tracking/: abstract_tracking.rs  mod.rs  odom.rs  odom_wheels.rs
src/tracking/odom/: mod.rs  odom_tracking.rs  odom_wheels.rs
src/utils/: math.rs  mod.rs  timer.rs
src/utils/samplers/: abstract_sampler.rs  mod.rs  multivariate_gaussian_sampler.rs
