[package]
name = "V5_Rust_Experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 3
icon = "cool-x"
compress = true

[dependencies]
vexide = "0.6.1"
nalgebra = { version = "0.33.2", default-features = false, features = ["libm", "alloc"] }
approx = "0.5.1"
veranda = "0.1.4"
rand = { version = "0.9.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
async-trait = { version = "0.1.86", default-features = false }
