[package]
name = "v5_rust_shenanigans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 4
icon = "cool-x"
compress = true

[dependencies]
vexide = "0.7.0"
async-trait = { version = "0.1.87", default-features = false }
nalgebra = { version = "0.33.2", default-features = false, features = [
    "libm",
    "alloc",
    "rand-no-std",
] }
rand = { version = "0.9.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
veranda = "0.1.5"
autons = "0.1.0"
dyn-clone = { version = "1.0.19", default-features = false }
vexide-slint = "0.1.0"
bon = { version = "3.5.1", default-features = false }
